unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Chat__c.field-meta.xml
<CustomField>
    <fullName>Body_Chat__c</fullName>
    <label>Body Chat</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>