unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Chat_Auto__c.field-meta.xml
<CustomField>
    <fullName>Body_Chat_Auto__c</fullName>
    <label>Body Chat Auto</label>
    <type>TextArea</type>
</CustomField>