unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Email_Auto__c.field-meta.xml
<CustomField>
    <fullName>Body_Email_Auto__c</fullName>
    <label>Body Email Auto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>