unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Phone_Auto__c.field-meta.xml
<CustomField>
    <fullName>Body_Phone_Auto__c</fullName>
    <label>Body Phone Auto</label>
    <type>TextArea</type>
</CustomField>