unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Private_Auto__c.field-meta.xml
<CustomField>
    <fullName>Body_Private_Auto__c</fullName>
    <label>Body Private Auto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>