unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Public__c.field-meta.xml
<CustomField>
    <fullName>Body_Public__c</fullName>
    <label>Body Public</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>