unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Body_Twitter__c</fullName>
    <label>Body Twitter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>