unpackaged/main/default/objects/Consumer_Articles__kav/fields/Body_Twitter_Auto__c.field-meta.xml
<CustomField>
    <fullName>Body_Twitter_Auto__c</fullName>
    <label>Body Twitter Auto</label>
    <type>TextArea</type>
</CustomField>