unpackaged/main/default/objects/Consumer_Articles__kav/fields/Quick_Code__c.field-meta.xml
<CustomField>
    <fullName>Quick_Code__c</fullName>
    <label>Quick Code</label>
    <type>TextArea</type>
</CustomField>