unpackaged/main/default/objects/Consumer_Articles__kav/fields/Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>Rating_Count__c</fullName>
    <label>Rating Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>